FDMATCH-75: add push-notification lib
